--- a/vehi.html
+++ b/vehi.html
@@ -33,7 +33,7 @@
     <div class="m-3">
         <h2 class="text-center">Evolucion del transporte</h2>
         <p>
-            Los vehículos antiguos representan la evolución del transporte y el ingenio humano.
+            Los vehículos antiguos representan la evolución del transporte y el ingenio humano. A continuacion te mostramos 5 vehiculos antiguos que marcaron un antes y un despues en la historia de la evolucion de estos
         </p>
 
         <h3>El Clásico Americano</h3>
@@ -60,7 +60,7 @@
         <h4>Chevrolet Impala (1965) </h4>
         <p> Representa el estilo grande y de lujo de la década de 1960 en Estados Unidos, con una presencia imponente.Un
             coche de gran tamaño, con un diseño característico y una experiencia de manejo lujosa, que definía los
-            "muscle cars"</p>
+            "muscle cars".</p>
         <img src="" alt="Chevrolet">
 
         <h3></h3>
